--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
 	</div>
 </div>
 	<script src="jquery-3.3.1.min.js"></script>
-    <script src="script.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
