--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@
 <head>
 	<title>title</title>
 	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width; initial-scale=1.0" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
 	<meta name="robots" content="index,follow" />
-	<link rel="stylesheet" type="text/css" href="w3.css" />
-    <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
 
 <body>
@@ -17,7 +15,7 @@
 		<p></p>
 	</div>
 </div>
-	<script src="jquery-3.3.1.min.js"></script>
+	<script src="jquery-3.4.1.min.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
