--- a/index.html
+++ b/index.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
 	<title>title</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
 	<meta name="robots" content="index,follow" />
 </head>
-
 <body>
-<div class="wrapper">
-	<div class="w3-responsible">
-		<p></p>
-	</div>
-</div>
-	<script src="jquery-3.4.1.min.js"></script>
-    <script src="main.js"></script>
+
+	
+
+	<script src="jquery-3.4.1.min.js" defer></script>
+    <script src="main.js" defer></script>
 </body>
 </html>
